--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,21 @@
 /* General */
 * {
-	padding: 0;
-	margin: 0;
-	border: 0;
+    padding: 0;
+    margin: 0;
+    border: 0;
     -moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 html, body {
-	height: 100%;
-	width: 100%;
-	font-size: 100%;
-	line-height: 1;
-	-ms-text-size-adjust: 100%;
-	-moz-text-size-adjust: 100%;
-	-webkit-text-size-adjust: 100%;
+    height: 100%;
+    width: 100%;
+    font-size: 100%;
+    line-height: 1;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
 }
 
 a, a:visited {
@@ -24,10 +24,6 @@ a, a:visited {
 
 ul li { 
     list-style: none;
-}
-
-::-webkit-scrollbar {
-    width: 0px;
 }
 
 body {
@@ -48,11 +44,6 @@ a:hover, label:hover {
 .container {
     max-width: 1140px;
     margin: 0 auto;
-}
-
-.inner {
-    display: none;
-    margin-top: 50px;
 }
 
 .list {
@@ -129,6 +120,7 @@ a:hover, label:hover {
 
 /* Subnavigation */
 .subnav__inner {
+    display: none;
     width: 250px;
     height: 300px;
     position: absolute;
@@ -138,6 +130,10 @@ a:hover, label:hover {
     border-radius: 6px;
     overflow-y: auto;
     overflow-x: none;
+}
+
+.subnav__inner::-webkit-scrollbar {
+    width: 0px;
 }
 
 .subnav__list {
@@ -169,7 +165,7 @@ a:hover, label:hover {
 }
 
 .subnav__extra-inner {
-    margin-top: 50px;
+    display: none;
 }
 
 .subnav__checkbox:checked + .subnav__inner,  .subnav__extra-checkbox:checked ~ .subnav__extra-inner{
@@ -179,6 +175,10 @@ a:hover, label:hover {
 .subnav__extra-checkbox:focus + label, .subnav__extra-checkbox:active + label {
     background-color: darkslategray;
     transition: background-color 0.5s;
+}
+
+.subnav__extra-checkbox:checked, .subnav__extra-checkbox:checked + label {
+    display: none;
 }
 
 /* Adaptive */
