--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,9 @@ a:hover, label:hover {
 .icon {
     width: 30px;
     height: 30px;
-    margin-left: 30%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
 
 .title {
