--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-/* General */
 * {
     padding: 0;
     margin: 0;
@@ -74,7 +73,6 @@ a:hover, label:hover {
     padding-top: 2px;
 }
 
-/* Header */
 .header {
     display: block;
     background-color: cadetblue;
@@ -96,7 +94,6 @@ a:hover, label:hover {
     border-radius: 20%;
 }
 
-/* Navigation */
 .nav__list {
     display: flex;
     flex-direction: row;
@@ -120,7 +117,6 @@ a:hover, label:hover {
     border-radius: 50%;
 }
 
-/* Subnavigation */
 .subnav__inner {
     display: none;
     width: 250px;
@@ -146,7 +142,6 @@ a:hover, label:hover {
     grid-column: 1/4;
 }
 
-/* Subnavigation extra */
 .subnav__extra-checkbox, .subnav__checkbox {
     position: absolute;
     -webkit-appearance: none;
@@ -170,20 +165,19 @@ a:hover, label:hover {
     display: none;
 }
 
-.subnav__checkbox:checked + .subnav__inner,  .subnav__extra-checkbox:checked ~ .subnav__extra-inner{
+.subnav__checkbox:checked + .subnav__inner,  .subnav__extra-checkbox:checked ~ .subnav__extra-inner {
     display: block;
 }
 
-.subnav__extra-checkbox:focus + label, .subnav__extra-checkbox:active + label {
+.subnav__extra-checkbox:focus + .subnav__button, .subnav__extra-checkbox:active + .subnav__button {
     background-color: darkslategray;
     transition: background-color 0.5s;
 }
 
-.subnav__extra-checkbox:checked, .subnav__extra-checkbox:checked + label {
+.subnav__extra-checkbox:checked, .subnav__extra-checkbox:checked + .subnav__button {
     display: none;
 }
 
-/* Adaptive */
 @media (max-width: 345px) {
     .nav__item_hidden {
         display: none;
